<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play?</string>
    <string name="click_the_views">Click the views</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
</resources>