<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-21dp"
    tools:layout_editor_absoluteY="223dp"
    android:id="@+id/constraint_one">

    <TextView
        android:id="@+id/box_one"
        style="@style/box_one"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two"
        style="@style/box_one"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:text="@string/box_two"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_one" />

    <TextView
        android:id="@+id/box_three"
        style="@style/box_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/box_four"
        app:layout_constraintTop_toTopOf="@+id/box_two"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@id/box_two"/>

    <TextView
        android:id="@+id/box_four"
        style="@style/box_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/box_five"
        app:layout_constraintTop_toBottomOf="@+id/box_three"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/box_five"
        style="@style/box_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@+id/box_four"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>